--- a/organization-service/src/main/resources/application.yml
+++ b/organization-service/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
             content-type: application/json
       kafka:
         binder:
-          zkNodes: localhost
-          brokers: localhost
+          zkNodes: 192.168.178.48
+          brokers: 192.168.178.48
 
 #Setting the logging levels for the service
 logging:
