--- a/zuulsvr/src/main/resources/application.yml
+++ b/zuulsvr/src/main/resources/application.yml
@@ -27,3 +27,7 @@ eureka:
 #  routes:
 #    organizationservice: /organization/**
 #    licensingservice: /licensing/**
+zuul:
+  host:
+    connect-timeout-millis: 60000 # starting the connection 
+    socket-timeout-millis: 60000  # monitor the continuous incoming data flow
